# mh-mtd-updater

./: .env.example  .gitignore  README.md  config.yml  csv-cli.py  db-cli.py  helpers.py  main.py  pyproject.toml  schema.sql
reports/: report.css
services/: csv.py  db.py  xvrl.py
xslt/: reduceSidecar.xslt  xvrl2html.xslt
