[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mh-mtd-updater"
version = "0.1.0"
description = "Python service to add or update and correct metadata in MediaHaven."
readme = "README.md"
keywords = ["validation", "transformation", "metadata"]
requires-python = ">=3.10"
dependencies = [
    "mediahaven==0.8.1",
    "viaa-chassis==0.2.1",
    "psycopg[binary]==3.2.10",
    "psycopg-pool==3.2.6"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]
